[tool.poetry]
name = "nordpool"
version = "0.4.1"
description = "Python library for fetching Nord Pool spot prices."
authors = ["Kimmo Huoman <kipenroskaposti@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kipe/nordpool"
repository = "https://github.com/kipe/nordpool"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.3"
pytz = "^2024.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
vcrpy = "^6.0.2"
time-machine = "^2.16.0"
coverage = "^7.6.3"
coveralls = "^4.0.1"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip = []
known_first_party = ['nordpool']
